# TrabajoGrado

./: .gitignore  README.md
TrabajoGradoMVC/: TrabajoGradoMVC.sln
TrabajoGradoMVC/TrabajoGradoMVC/: CMakeLists.txt  TrabajoGradoMVC.vcxproj  TrabajoGradoMVC.vcxproj.filters  main.cpp
TrabajoGradoMVC/TrabajoGradoMVC/Controlador/: Kinect.cpp  Kinect.h  ManejadorGestos.cpp  ManejadorGestos.h
TrabajoGradoMVC/TrabajoGradoMVC/Modelo/: Deformacion.cpp  Deformacion.h  ITK.cpp  ITK.h  ITKaVTK.cpp  ITKaVTK.h
TrabajoGradoMVC/TrabajoGradoMVC/Vista/: VTK.cpp  VTK.h  Visualizacion.cpp  Visualizacion.h
